Scrolling but resolved, minor overflow of text box

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ nav {
     top: 66px;
     right: 0;
     width: 75%;
-    bottom: 100px;
+    bottom: 80px;
     overflow: auto;
 }
 
@@ -46,26 +46,12 @@ nav {
     text-align: right;
 }
 
-#input{
+#field{
     position: absolute;
     float: right;
     bottom: 0;
-    height: 70px;
+    height: 80px;
     right: 0;
     width: 75%;
-    /* border: 1px solid black; */
-}
-
-#field{
-    float:left;
-    width: 85%;
-    height: 100%;
-}
-
-#submit{
-    position: abosolute;
-    float: left;
-    top: 0;
-    height: 100%;
-    width: 10%;
+    border: 0;
 }
